<resources>
    <!-- Nombre de aplicación -->
    <string name="app_name">Hub actividades</string>
    <string name="app_name_long">Hub de actividades de Programación Móvil</string>

    <!-- Hub y títulos -->
    <string name="act2_1">Actividad 2.1</string>
    <string name="act2_2">Actividad 2.2</string>
    <string name="act4_1">Actividad 4.1</string>
    <string name="act4_2">Actividad 4.2</string>
    <string name="act5_1">Actividad 5.1</string>
    <string name="act5_2">Actividad 5.2</string>
    <string name="act6">Actividad 6</string>
    <string name="act7">Actividad 7</string>
    <string name="act8">Actividad 8</string>

    <!-- Actividades: 2.1 -->
    <string name="email">Correo electrónico</string>
    <string name="str_pwd">Contraseña</string>

    <!-- Actividades: 4.1 -->
    <string name="items_search">Buscar</string>
    <string name="items_share">Compartir</string>

    <!-- Actividades: 4.2 -->
    <string name="currency_UYU">Peso Uruguayo (UYU)</string>
    <string name="currency_USD">Dólar Estadounidense (USD)</string>
    <string name="currency_BRL">Real Brasileño (BRL)</string>

    <!-- Actividades: 7 -->
    <string-array name="courses">
        <item>Informática para Internet</item>
        <item>Tecnólogo en Análisis y Desarrollo de Sistemas</item>
        <item>Tecnólogo en Sistemas de Energías Renovables</item>
    </string-array>
    <!-- Esto es un arreglo de hilos de texto / This is a string array -->

    <!-- Actividades: 8 -->
    <string name="a8_link_ioc_ccodes">Ingresa el código IOC del país para obtener algunos de sus datos (<a href="https://en.wikipedia.org/wiki/List_of_IOC_country_codes#Current_NOCs">toca aquí para ver la lista de códigos</a>):</string>
</resources>